--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "ngcart": "~0.0.3-rc.2",
     "angular": "~1.3.15",
     "angular-resource": "~1.3.15",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "angular-md5": "^0.1.10"
   }
 }
