--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ APP_MOBILE_URL=http://m.hlv24.ru
 
 HOST=m.hlv24.ru
 
-DB_HOST=localhost
-DB_DATABASE=board
+DB_HOST=db
+DB_DATABASE=boardv2
 DB_USERNAME=root
 DB_PASSWORD=root
 
