--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 APP_MOBILE_URL=http://m.board.local
 
-DB_HOST=localhost
+DB_HOST=db
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
