--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ APP_MOBILE_URL=http://m.hlv24.ru
 HOST=m.hlv24.ru
 
 DB_HOST=db
-DB_DATABASE=db
+DB_DATABASE=boardv2
 DB_USERNAME=root
 DB_PASSWORD=root
 
