--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 APP_ENV=dev
 APP_DEBUG=false
 APP_KEY=SomeRandomString
-APP_MOBILE_URL=http://m.hlv24.ru
+APP_MOBILE_URL=http://m.hlv.loc
 
-HOST=m.hlv24.ru
+HOST=m.hlv.loc
 
 DB_HOST=db
 DB_DATABASE=boardv2
